More Padding for Mobile

--- a/src/components/ProjectGallery/ProjectGallery.css
+++ b/src/components/ProjectGallery/ProjectGallery.css
@@ -398,6 +398,10 @@
 
 
 @media (max-width: 800px) {
+  .gallery-section {
+    padding: 3rem 1rem;
+  }
+
   .card-overlay {
     display: none; 
   }
