--- a/src/components/ProjectGallery/ProjectGallery.css
+++ b/src/components/ProjectGallery/ProjectGallery.css
@@ -350,6 +350,10 @@
 }
 
 @media (max-width: 800px) {
+  .gallery-section {
+    padding: 4rem 2rem 10rem;
+  }
+  
   .gallery-grid {
     gap: 1.8rem;
     row-gap: 4rem;
@@ -388,32 +392,3 @@
     height: 240px;
   }
 }
-
-
-@media (min-width: 801px) {
-  .gallery-section {
-    padding: 3rem 1rem;
-  }
-  
-  .card-description {
-    display: none;
-  }
-}
-
-
-@media (max-width: 800px) {
-  .gallery-section {
-    padding: 3rem 1rem;
-  }
-
-  .card-overlay {
-    display: none; 
-  }
-
-  .card-description {
-    display: block;
-    margin-top: 0.5rem;
-    color: #555;
-    line-height: 1.5;
-  }
-} 
