Update Construction Component

--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -14,25 +14,27 @@
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 /* Bottom Goose (scales with screen) */
 .uc-goose {
   position: absolute;
-  bottom: 2vh;
-  left: 50%;
-  transform: translateX(-50%);
-  width: min(40vw, 400px);
+  width: 658.78px;
+  height: 746.21px;
+  left: 641.27px;
+  bottom: 71.79px;
+  object-fit: contain;
   z-index: 1;
 }
 
 /* Construction Tape */
 .uc-tape {
   position: absolute;
-  top: 30vh;
-  left: 50%;
-  transform: translateX(-50%);
-  width: min(60vw, 600px);
+  width: 1440px;
+  height: 817.91px;
+  left: 0;
+  bottom: 0;
   z-index: 2;
 }
 
