--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -23,7 +23,7 @@
   width: 658.78px;
   height: 746.21px;
   left: 641.27px;
-  bottom: 71.79px;
+  top: 71.79px;
   object-fit: contain;
   z-index: 1;
 }
@@ -34,7 +34,8 @@
   width: 1440px;
   height: 817.91px;
   left: 0;
-  bottom: 0;
+  top: 0;
+  object-fit: contain;
   z-index: 2;
 }
 
@@ -44,7 +45,8 @@
   width: 691px;
   height: 202px;
   left: 179px;
-  bottom: 310px;
+  top: 310px;
+  object-fit: contain;
   z-index: 3;
 }
 
@@ -53,7 +55,8 @@
   position: absolute;
   width: 212px;
   height: 34;
-  left: 182px;
-  bottom: 536px;
+  left: 179px;
+  top: 536px;
+  object-fit: contain;
   z-index: 4;
 }
