--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #000; /* or your background */
+  background: #073c4e; /* or your background */
 }
 
 /* The positioned stacking area */
@@ -20,43 +20,48 @@
 /* Bottom Goose (scales with screen) */
 .uc-goose {
   position: absolute;
-  width: 658.78px;
-  height: 746.21px;
-  left: 641.27px;
-  top: 71.79px;
+  width: 45.7%;
+  left: 44.5%;
+  top: 8.8%;
   object-fit: contain;
   z-index: 1;
 }
 
+
 /* Construction Tape */
 .uc-tape {
   position: absolute;
-  width: 1440px;
-  height: 817.91px;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
   object-fit: contain;
   z-index: 2;
 }
 
+
 /* Title Text */
 .uc-text-1 {
   position: absolute;
-  width: 691px;
-  height: 202px;
-  left: 179px;
-  top: 310px;
+  width: 48%;
+  left: 12.4%;
+  top: 37.9%;
   object-fit: contain;
   z-index: 3;
 }
 
+
 /* Subtitle Text */
 .uc-text-2 {
   position: absolute;
-  width: 212px;
-  height: 34;
-  left: 179px;
-  top: 536px;
+  width: 14.7%;
+  left: 12.4%;
+  top: 65.5%;
   object-fit: contain;
   z-index: 4;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
