--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -20,48 +20,50 @@
 /* Bottom Goose (scales with screen) */
 .uc-goose {
   position: absolute;
-  width: 45.7%;
-  left: 44.5%;
-  top: 8.8%;
-  object-fit: contain;
+  width: 45.75vw;
+  height: 91.25vh;
+  left: 44.5vw;
+  top: 8.8vh;
   z-index: 1;
+  object-fit: contain;
 }
+
 
 
 /* Construction Tape */
 .uc-tape {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   left: 0;
   top: 0;
-  object-fit: contain;
   z-index: 2;
+  object-fit: cover; /* IMPORTANT: keeps it filling the entire screen */
 }
+
 
 
 /* Title Text */
 .uc-text-1 {
   position: absolute;
-  width: 48%;
-  left: 12.4%;
-  top: 37.9%;
-  object-fit: contain;
+  width: 47.98vw;
+  height: 24.69vh;
+  left: 12.43vw;
+  top: 37.88vh;
   z-index: 3;
+  object-fit: contain;
 }
+
 
 
 /* Subtitle Text */
 .uc-text-2 {
   position: absolute;
-  width: 14.7%;
-  left: 12.4%;
-  top: 65.5%;
-  object-fit: contain;
+  width: 14.72vw;
+  height: 4.15vh;
+  left: 12.43vw;
+  top: 65.52vh;
   z-index: 4;
+  object-fit: contain;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-}
