--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -24,7 +24,7 @@
   height: 91.25vh;
   left: 44.5vw;
   top: 8.8vh;
-  z-index: 1;
+  z-index: 2;
   object-fit: contain;
 }
 
@@ -37,33 +37,20 @@
   height: 100vh;
   left: 0;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   object-fit: cover; /* IMPORTANT: keeps it filling the entire screen */
 }
 
 
 
 /* Title Text */
-.uc-text-1 {
+.uc-text {
   position: absolute;
   width: 47.98vw;
   height: 24.69vh;
   left: 12.43vw;
   top: 37.88vh;
-  z-index: 3;
-  object-fit: contain;
-}
-
-
-
-/* Subtitle Text */
-.uc-text-2 {
-  position: absolute;
-  width: 14.72vw;
-  height: 4.15vh;
-  left: 12.43vw;
-  top: 65.52vh;
-  z-index: 4;
+  z-index: 1;
   object-fit: contain;
 }
 
