Update Construction Component

--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -31,12 +31,12 @@
 /* When the screen becomes taller than the design */
 @media screen and (max-aspect-ratio: 1440/818) {
   .uc-goose {
-    width: auto;
-    height: 91.25vh;       /* Fill screen height */
+    width: 45.75vw;
+    height: auto;       /* Fill screen height */
     top: auto;
     bottom: 0;           /* Attach to bottom */
     left: 50%;           /* approximate centering */
-    transform: translateX(-20%); /* adjust until visually correct */
+    /* transform: translateX(-20%); adjust until visually correct */
   }
 }
 
