--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -29,6 +29,16 @@
   object-fit: contain;
 }
 
+@media screen and (max-aspect-ratio: 1440/818) {
+  .uc-goose {
+    width: 60vw;
+    height: auto;       
+    top: auto;
+    bottom: 0;           
+    left: 40vw;           
+  }
+}
+
 /* Construction Tape */
 .uc-tape {
   position: absolute;
@@ -58,11 +68,18 @@
 
   /* Goose grows and shifts down */
   .uc-goose {
-    width: 55vw;
+    width: 65vw;
     height: auto;
     left: 35vw;
     bottom: 0;
-    top: auto; 
+    top: auto;
+  }
+
+  .uc-text {
+    width: 50vw;
+    height: auto;
+    left: 10vw;
+    top: 25vh;
   }
 
 }
@@ -92,13 +109,3 @@
   }
 }
 
-
-/* @media screen and (max-aspect-ratio: 1440/818) {
-  .uc-goose {
-    width: 70vw;
-    height: auto;       
-    top: auto;
-    bottom: 0;           
-    left: 40%;           
-  }
-} */
