Update Construction Component

--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -136,3 +136,23 @@
   }
 }
 
+@media (max-width: 490px) {
+
+  /* Goose centered and larger */
+  .uc-goose {
+    width: auto;
+    height: 60vh;
+    left: 10%;
+    bottom: 0;
+    top: auto;
+  }
+
+  /* Text moves above goose */
+  .uc-text {
+    width: 70vw;
+    height: auto;
+    left: 10vw;
+    top: 15vh;
+  }
+}
+
