--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -1,5 +1,5 @@
 /* Full-screen container */
-.uc-screen {
+.uc-container {
   width: 100vw;
   height: 100vh;
   overflow: hidden; /* Prevent scrolling */
