--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -23,7 +23,7 @@
   width: 45.75vw;
   height: 91.25vh;
   left: 44.5vw;
-  top: 8.75vh;
+  bottom: -8.75vh;
   z-index: 2;
   object-fit: contain;
 }
