--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -52,8 +52,8 @@
 
 @media screen and (max-aspect-ratio: 1440/818) {
   .uc-goose {
-    width: 50vw;
-    height: auto;    
+    width: auto;
+    height: 85vh;    
     bottom: 0;   
     top: auto;          
     left: 45vw;           
@@ -94,8 +94,8 @@
 
   /* Goose grows and shifts down */
   .uc-goose {
-    width: 70vw;
-    height: auto;
+    width: auto;
+    height: 65vh;
     left: 35vw;
     bottom: 0;
     top: auto;
