--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -95,8 +95,8 @@
   /* Goose grows and shifts down */
   .uc-goose {
     width: auto;
-    height: 110vh;
-    left: -25vw;
+    height: 105vh;
+    left: -35%;
     bottom: 0;
     top: auto;
   }
