--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -176,6 +176,26 @@
   }
 }
 
+@media (max-width: 460px) {
+
+  /* Goose centered and larger */
+  .uc-goose {
+    width: auto;
+    height: 100vh;
+    left: -70%;
+    bottom: 0;
+    top: auto;
+  }
+
+  /* Text moves above goose */
+  .uc-text {
+    width: 70vw;
+    height: auto;
+    left: 10vw;
+    top: 15vh;
+  }
+}
+
 @media (max-width: 405px) {
 
   /* Goose centered and larger */
