--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -142,7 +142,7 @@
   .uc-goose {
     width: auto;
     height: 100vh;
-    left: -50%;
+    left: -30%;
     bottom: 0;
     top: auto;
   }
@@ -162,6 +162,26 @@
   .uc-goose {
     width: auto;
     height: 100vh;
+    left: -40%;
+    bottom: 0;
+    top: auto;
+  }
+
+  /* Text moves above goose */
+  .uc-text {
+    width: 70vw;
+    height: auto;
+    left: 10vw;
+    top: 15vh;
+  }
+}
+
+@media (max-width: 500px) {
+
+  /* Goose centered and larger */
+  .uc-goose {
+    width: auto;
+    height: 100vh;
     left: -50%;
     bottom: 0;
     top: auto;
@@ -176,7 +196,7 @@
   }
 }
 
-@media (max-width: 460px) {
+@media (max-width: 435px) {
 
   /* Goose centered and larger */
   .uc-goose {
