--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -142,6 +142,26 @@
   .uc-goose {
     width: auto;
     height: 100vh;
+    left: -15%;
+    bottom: 0;
+    top: auto;
+  }
+
+  /* Text moves above goose */
+  .uc-text {
+    width: 70vw;
+    height: auto;
+    left: 10vw;
+    top: 15vh;
+  }
+}
+
+@media (max-width: 640px) {
+
+  /* Goose centered and larger */
+  .uc-goose {
+    width: auto;
+    height: 100vh;
     left: -20%;
     bottom: 0;
     top: auto;
