--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -57,7 +57,7 @@
     height: 110vh;    
     bottom: 0;   
     top: auto;          
-    left: 0%;           
+    right: 0%;           
   }
 
   .uc-text {
@@ -97,7 +97,7 @@
   .uc-goose {
     width: auto;
     height: 105vh;
-    left: 8%;
+    left: -8%;
     bottom: 0;
     top: auto;
   }
