--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -57,7 +57,7 @@
     height: 110vh;    
     bottom: 0;   
     top: auto;          
-    right: 0%;           
+    left: 20%;           
   }
 
   .uc-text {
@@ -75,6 +75,26 @@
     width: auto;
     height: 110vh;
     left: 0%;
+    bottom: 0;
+    top: auto;
+  }
+  
+  .uc-text {
+    width: 40vw;
+    height: auto;
+    left: 10vw;
+    top: 25vh;
+  }
+  
+}
+
+@media (max-width: 900px) {
+
+  /* Goose grows and shifts down */
+  .uc-goose {
+    width: auto;
+    height: 110vh;
+    left: -8%;
     bottom: 0;
     top: auto;
   }
