--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -57,6 +57,15 @@
   z-index: 2;
 }
 
+@media (max-width: 1414px) {
+  .uc-goose {
+    left: -10%;
+  
+    width: auto;
+    height: 110vh;
+  }
+}
+
 /* @media screen and (max-aspect-ratio: 1440/818) {
   .uc-goose {
     width: auto;
