--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -22,7 +22,7 @@
   position: absolute;
   bottom: 0;
   top: auto;
-  left: 20%;
+  right: 20%;
 
   width: auto;
   height: 110vh;
@@ -59,13 +59,13 @@
 
 @media (max-width: 1414px) {
   .uc-goose {
-    left: 5%;
+    right: 5%;
   }
 }
 
 @media (max-width: 1185px) {
   .uc-goose {
-    left: 20%;
+    right: 20%;
   }
   .uc-text {
     top: 25vh;
