--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -74,6 +74,17 @@
   }
 }
 
+@media (max-width: 985px) {
+  .uc-goose {
+    height: 100vh;
+    right: -50%;
+  }
+  .uc-text {
+    top: 18vh;
+    width: 50vw;
+  }
+}
+
 /* @media screen and (max-aspect-ratio: 1440/818) {
   .uc-goose {
     width: auto;
