--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -85,6 +85,17 @@
   }
 }
 
+@media (max-width: 900px) {
+  .uc-goose {
+    height: 100vh;
+    right: -55%;
+  }
+  .uc-text {
+    top: 13vh;
+    width: 50vw;
+  }
+}
+
 /* @media screen and (max-aspect-ratio: 1440/818) {
   .uc-goose {
     width: auto;
