--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -108,7 +108,13 @@
 
 @media (max-width: 590px) {
   .uc-goose {
-    right: -88%;
+    right: -90%;
+  }
+}
+
+@media (max-width: 540px) {
+  .uc-goose {
+    right: -110%;
   }
 }
 
