--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -22,12 +22,13 @@
   position: absolute;
   bottom: 0;
   top: auto;
-  right: -25%;
+  /* right: -25%; */
 
   width: auto;
   height: 110vh;
   
   object-fit: cover;
+  object-position: center;
   z-index: 1;
 }
 
