--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -49,7 +49,9 @@
 .uc-text {
   position: absolute;
   top: 37.9vh;
-  left: 12.43vw;
+  align-items: left;
+  padding-left: 12%;
+  /* left: 12.43vw; */
 
   width: 35vw;
   height: auto;
@@ -58,7 +60,7 @@
   z-index: 2;
 }
 
-@media (max-width: 1414px) {
+/* @media (max-width: 1414px) {
   .uc-goose {
     right: -35%;
   }
@@ -135,7 +137,7 @@
   .uc-goose {
     right: -127.5%;
   }
-}
+} */
 
 /* @media screen and (max-aspect-ratio: 1440/818) {
   .uc-goose {
