--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -48,15 +48,16 @@
 /* Title Text */
 .uc-text {
   position: absolute;
-  top: 37.9vh;
-  align-items: left;
-  padding-left: 12%;
+  top: 37.9%;
+  /* align-items: left; */
+  /* padding-left: 12%; */
   /* left: 12.43vw; */
 
   width: 35vw;
   height: auto;
 
-  object-fit: contain;
+  object-fit: cover;
+  object-position: center;
   z-index: 2;
 }
 
