--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -49,6 +49,7 @@
 .uc-text {
   position: absolute;
   top: 37.9%;
+  padding-left: 10%;
   /* align-items: left; */
   /* padding-left: 12%; */
   /* left: 12.43vw; */
