--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -15,7 +15,10 @@
   position: absolute;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  /* overflow: hidden; */
 }
 
 /* Bottom Goose (scales with screen) */
