--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -25,8 +25,8 @@
 .uc-goose {
   position: absolute;
   bottom: 0;
-  left: 50%;
-  transform: translateX(5%);
+  /* left: 50%; */
+  transform: translateX(50px);
   /* right: -20%; */
   /* top: auto; */
   /* right: -25%; */
