--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -59,6 +59,12 @@
   z-index: 2;
 }
 
+@media (max-height: 850px) {
+  .uc-goose {
+    transform: translateX(30px);
+  }
+}
+
 
 /* @media (max-width: 1414px) {
   .uc-goose {
