--- a/src/components/UnderConstruction/UnderConstruction.css
+++ b/src/components/UnderConstruction/UnderConstruction.css
@@ -24,7 +24,7 @@
 .uc-goose {
   position: absolute;
   bottom: 0;
-  transform: translateX(150px);
+  transform: translateX(175px);
 
   width: auto;
   height: 100vh;
@@ -62,6 +62,12 @@
 @media (max-height: 800px) {
   .uc-goose {
     transform: translateX(150px);
+  }
+}
+
+@media (max-width: 550px) {
+  .uc-goose {
+    transform: translateX(120px);
   }
 }
 
